examples/csharp/errors/invalid-request/obj/project.nuget.cache
{
  "version": 2,
  "dgSpecHash": "Z3rFz/KnYL2PTvZJXEAHcDVWdEl0ZnjBBfB7TqPqTP0DyAt8dpC8F0SMspx2pdNb+wvZnI59Sub0g6g4D58avA==",
  "success": true,
  "projectFilePath": "/Users/liornabat/development/projects/kubemq/clients/kubemq-a2a/examples/csharp/errors/invalid-request/InvalidRequest.csproj",
  "expectedPackageFiles": [],
  "logs": []
}